[package]
name = "hvac_iot"
version = "0.1.6"
edition = "2021"
description = "Send MQTT HVAC-iot metrics to InfluxDB"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bytes = { version = "1.5.0", features = ["serde"] }
chrono = "0.4.33"
clap = { version = "4.5.0", features = ["derive", "env"]}
influxdb = { version = "0.7.1", features = ["derive"] }
rumqttc = "0.23.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36.0", features = ["full"]}
toml = "0.8.9"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "json"]}
url = "2.5.0"
