[package]
name = "hvac_iot"
version = "0.1.7"
edition = "2021"
description = "Send MQTT HVAC-iot metrics to InfluxDB"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
bytes = { version = "1.6.0", features = ["serde"] }
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive", "env"]}
influxdb = { version = "0.7.2", features = ["derive"] }
rumqttc = "0.25.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"]}
toml = "1.0.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "json"]}
url = "2.5.0"
